#47 fix overflow when filename is too long for upload

--- a/src/main/resources/static/resources/css/styles.css
+++ b/src/main/resources/static/resources/css/styles.css
@@ -34,6 +34,10 @@
     cursor: pointer;
 }
 
+.custom-file {
+    overflow: hidden;
+}
+
 body {
     padding-bottom: 70px;
 }
